--- a/_config.yml
+++ b/_config.yml
@@ -21,18 +21,19 @@
 title: Paul Dhillon
 email: pauldhillo@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Simple truths about software topics in plain english.
+  Waste not a word, for our time is very limited. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+
 github_username:  inderpald
 
 # Build settings
 theme: minima
+
 plugins:
   - jekyll-feed
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
